--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Repository</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>First Repository</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-
 <body>
-    <h1>Hello World!</h1>
-</body>
 
+  <!-- Navbar -->
+  <nav class="navbar navbar-dark bg-info navbar-expand d-md-none d-lg-none d-xl-none">
+    <ul class="navbar-nav nav-justified w-100">
+      <li class="nav-item">
+        <a href="#" class="nav-link">Home</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Cari</a>
+      </li>
+      <li class="nav-item">
+        <h2 style="color: green;">First</h2>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Notif</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">Profile</a>
+      </li>
+    </ul>
+  </nav>
+  
+</body>
 </html>
